--- a/feature showcase/pom.xml
+++ b/feature showcase/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ProceduralTerrainGenerator</module>
+        <module>ProdeduralBuildingGenerator</module>
     </modules>
 
     <properties>
