--- a/feature showcase/pom.xml
+++ b/feature showcase/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ProceduralTerrainGenerator</module>
         <module>ProdeduralBuildingGenerator</module>
+        <module>ProceduralWorldGenerator</module>
     </modules>
 
     <properties>
