--- a/Tools/ShaderDebugger/pom.xml
+++ b/Tools/ShaderDebugger/pom.xml
@@ -4,25 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>net.mega2223</groupId>
-        <artifactId>FeatureShowcase</artifactId>
-        <version>0.1</version>
+        <groupId>net.Mega2223</groupId>
+        <artifactId>Tools</artifactId>
+        <version>BETA-0.2-U</version>
     </parent>
 
-    <artifactId>ProceduralWorldGenerator</artifactId>
+    <artifactId>ShaderDebugger</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>net.Mega2223</groupId>
-            <artifactId>AguaEngine3D</artifactId>
-            <version>BETA-0.3-U</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 
 </project>
