--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
     <groupId>net.Mega2223</groupId>
     <artifactId>AguaEngine3D</artifactId>
-    <packaging>jar</packaging>
-    <version>BETA-0.2-U</version>
+    <packaging>pom</packaging>
+    <version>BETA-0.3-U</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
