--- a/Tools/ShaderDebugger/pom.xml
+++ b/Tools/ShaderDebugger/pom.xml
@@ -5,11 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.Mega2223</groupId>
-        <artifactId>Tools</artifactId>
-        <version>BETA-0.2-U</version>
+        <artifactId>AguaEngine3D</artifactId>
+        <version>BETA-0.3-U</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>ShaderDebugger</artifactId>
+    <groupId>net.mega2223.aguaengine3d.tools</groupId>
+    <artifactId>ShaderDebbuger</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
