--- a/Feature Showcase/procedural-building-gen/pom.xml
+++ b/Feature Showcase/procedural-building-gen/pom.xml
@@ -5,12 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.mega2223</groupId>
-        <artifactId>aguaengine3d</artifactId>
-        <version>BETA-0.4-U</version>
+        <artifactId>feature-showcase</artifactId>
+        <version>0.1</version>
     </parent>
 
-    <groupId>net.mega2223.aguaengine3d</groupId>
-    <artifactId>tools</artifactId>
+    <artifactId>procedural-building-gen</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
