--- a/Feature Showcase/procedural-world-gen/pom.xml
+++ b/Feature Showcase/procedural-world-gen/pom.xml
@@ -5,17 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.mega2223</groupId>
-        <artifactId>aguaengine3d</artifactId>
-        <version>BETA-0.4-U</version>
+        <artifactId>feature-showcase</artifactId>
+        <version>0.1</version>
     </parent>
 
-    <groupId>net.mega2223.aguaengine3d</groupId>
-    <artifactId>tools</artifactId>
+    <artifactId>procedural-world-gen</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>net.mega2223</groupId>
+            <artifactId>aguaengine3d</artifactId>
+            <version>BETA-0.3-U</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.mega2223</groupId>
+            <artifactId>aguaengine3d</artifactId>
+            <version>BETA-0.4-U</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
