--- a/Tools/ShaderDebugger/pom.xml
+++ b/Tools/ShaderDebugger/pom.xml
@@ -3,12 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.mega2223</groupId>
-        <artifactId>aguaengine3d</artifactId>
-        <version>BETA-0.3-U</version>
-        <relativePath>../../pom.xml</relativePath>
-    </parent>
 
     <groupId>net.mega2223.aguaengine3d.tools</groupId>
     <artifactId>shader-debugger</artifactId>
@@ -18,5 +12,13 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.mega2223</groupId>
+            <artifactId>aguaengine3d</artifactId>
+            <version>BETA-0.4-U</version>
+        </dependency>
+    </dependencies>
 
 </project>
