Linux compat + sub-directory rearrangement

--- a/applications/feature-showcase/physics-showcase/pom.xml
+++ b/applications/feature-showcase/physics-showcase/pom.xml
@@ -3,13 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.mega2223</groupId>
-        <artifactId>feature-showcase</artifactId>
-        <version>0.1</version>
-    </parent>
 
-    <artifactId>procedural-terrain-gen</artifactId>
+    <groupId>net.mega2223.aguaengine3d</groupId>
+    <artifactId>physics-showcase</artifactId>
+    <version>0.1-U</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
