--- a/applications/tools/model-editor/pom.xml
+++ b/applications/tools/model-editor/pom.xml
@@ -3,26 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.mega2223</groupId>
-        <artifactId>feature-showcase</artifactId>
-        <version>0.1</version>
-    </parent>
 
-    <artifactId>procedural-world-gen</artifactId>
+    <groupId>net.mega2223.aguaengine3d.tools</groupId>
+    <artifactId>model-editor</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.mega2223</groupId>
             <artifactId>aguaengine3d</artifactId>
             <version>BETA-0.4-U</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
-
 </project>
