--- a/applications/feature-showcase/procedural-terrain-gen/pom.xml
+++ b/applications/feature-showcase/procedural-terrain-gen/pom.xml
@@ -23,4 +23,25 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <defaultGoal>
+            clean validate compile test package assembly:single verify install -o
+        </defaultGoal>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>net.mega2223.aguaengine3d.featureshowcase.proceduralterrain.ProceduralTerrainGenerator</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
