--- a/applications/feature-showcase/civ-like/pom.xml
+++ b/applications/feature-showcase/civ-like/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>net.mega2223</groupId>
             <artifactId>aguaengine3d</artifactId>
-            <version>BETA-0.5-U</version>
+            <version>DEV-0.5-U</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
